Add support for specifying an interface to listen on

--- a/badsmtp.env.example
+++ b/badsmtp.env.example
@@ -9,6 +9,10 @@ BADSMTP_PORT=2525
 # Comment out to disable message storage
 BADSMTP_MAILBOXDIR=./mailbox
 
+# IP address to bind the listener to (default: 127.0.0.1)
+# Set to 0.0.0.0 to bind all interfaces
+BADSMTP_LISTEN_ADDRESS=127.0.0.1
+
 # Port Behaviour Configuration
 # These port ranges trigger specific behaviours for testing SMTP clients
 
