--- a/.github/workflows/build-deb.yml
+++ b/.github/workflows/build-deb.yml
@@ -33,6 +33,12 @@ jobs:
           host-arch: ${{ matrix.arch }}
           buildpackage-opts: --build=binary --no-sign
           docker-image: debian:stable-slim
+          before-build-hook: |
+            wget -q https://go.dev/dl/go1.25.0.linux-amd64.tar.gz
+            rm -rf /usr/local/go
+            tar -C /usr/local -xzf go1.25.0.linux-amd64.tar.gz
+            export PATH=/usr/local/go/bin:$PATH
+            go version
 
       - name: List built packages
         run: |
