--- a/.github/workflows/build-deb.yml
+++ b/.github/workflows/build-deb.yml
@@ -34,6 +34,7 @@ jobs:
           buildpackage-opts: --build=binary --no-sign
           docker-image: debian:stable-slim
           before-build-hook: |
+            apt-get update && apt-get install -y wget
             wget -q https://go.dev/dl/go1.25.0.linux-amd64.tar.gz
             rm -rf /usr/local/go
             tar -C /usr/local -xzf go1.25.0.linux-amd64.tar.gz
