--- a/debian/rules
+++ b/debian/rules
@@ -49,6 +49,9 @@ override_dh_auto_test:
 	# Skip tests during package build
 	# Tests can be run separately if needed
 
+override_dh_dwz:
+	# Skip dwz compression - Go binaries have compressed debug sections that dwz doesn't handle
+
 override_dh_auto_clean:
 	$(MAKE) clean || true
 	dh_auto_clean
