Use smaller port ranges with preset timing values Use 25xxx port ranges to avoid clashes Add UFW config in debian package

--- a/badsmtp.env.example
+++ b/badsmtp.env.example
@@ -16,16 +16,16 @@ BADSMTP_LISTEN_ADDRESS=127.0.0.1
 # Port Behaviour Configuration
 # These port ranges trigger specific behaviours for testing SMTP clients
 
-# Starting port for greeting delay range (default: 3000)
-# Ports 3000-3099 introduce delays of (port-3000)*10 seconds before greeting
-BADSMTP_GREETINGDELAYPORTSTART=3000
+# Starting port for greeting delay range (default: 25200)
+# Ports 25200..25209 map to discrete delays {0s,1s,2s,8s,10s,30s,60s,120s,300s,600s}
+BADSMTP_GREETINGDELAYPORTSTART=25200
 
-# Starting port for drop delay range (default: 5000)
-# Ports 5000-5099 drop connection after (port-5000)*10 seconds
-BADSMTP_DROPDELAYPORTSTART=5000
+# Starting port for drop delay range (default: 25600)
+# Ports 25600..25609 map to the same discrete delays (offset 0 is immediate drop)
+BADSMTP_DROPDELAYPORTSTART=25600
 
-# Port that triggers immediate connection drop (default: 6000)
-BADSMTP_IMMEDIATEDROPPORT=6000
+# Note: Immediate drop is represented by BADSMTP_DROPDELAYPORTSTART + offset 0 (25600)
+# The previous BADSMTP_IMMEDIATEDROPPORT has been removed.
 
 # TLS Configuration
 # Port for implicit TLS (SMTPS) connections (default: 25465)
